--- a/www/index.html
+++ b/www/index.html
@@ -8,19 +8,13 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-   <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+
 	
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" href="css/custom.css">
 	
-	<script src='js/jquery.js'></script>
-	<!--<script src='js/jquery.mobile.custom.js'></script>-->
-	<script src='js/bootstrap.js'></script>
 
-	<!--<script src="js/local_storage_manager.js"></script>-->
-	<script src="js/function.js"></script>
     <title>Hello World</title>
 	
 	<style>
@@ -44,7 +38,7 @@
 
 
 body {
-background-image: url("img/screen.png");
+background-image: #EDEBED url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
 }		
@@ -52,6 +46,18 @@ background-size: 100%;
 </head>
 
 <body>
+   <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+		<script src='js/jquery.js'></script>
+	<!--<script src='js/jquery.mobile.custom.js'></script>-->
+	<script src='js/bootstrap.js'></script>
+
+	<!--<script src="js/local_storage_manager.js"></script>-->
+	<script src="js/function.js"></script>
+<script>
+
+
+</script>
 <!--<img class = "up" src="img/1.gif">
 <img class = "down" src="img/2.gif">
 <img class = "left"src="img/life3.gif">
@@ -90,12 +96,13 @@ $(document).ready(function(){
 var init=1
 $(window).bind("click",function(){
 	if(init==0){
-		navigator.vibrate(0);
+		navigator.vibrate(1000);
 		init=1;
 	}else{
-		setInterval(function(){
-			navigator.vibrate([1000, 1000, 3000, 1000, 5000]);
-		}, 11000);
+	navigator.vibrate(1000);
+		//setInterval(function(){
+			//navigator.vibrate(1000);
+		//}, 11000);
 		init=0;
 	}
 	if(Math.floor(Math.random() * 2) + 1 == 1 ){
