--- a/www/index.html
+++ b/www/index.html
@@ -96,13 +96,13 @@ $(document).ready(function(){
 var init=1
 $(window).bind("click",function(){
 	if(init==0){
-		navigator.vibrate(1000);
+		navigator.vibrate(0);
 		init=1;
 	}else{
-	navigator.vibrate(1000);
-		//setInterval(function(){
-			//navigator.vibrate(1000);
-		//}, 11000);
+
+		setInterval(function(){
+			navigator.vibrate([1000, 1000, 3000, 1000, 5000]);
+		}, 11000);
 		init=0;
 	}
 	if(Math.floor(Math.random() * 2) + 1 == 1 ){
