--- a/www/index.html
+++ b/www/index.html
@@ -97,10 +97,11 @@ var init=1
 $(window).bind("click",function(){
 	if(init==0){
 		navigator.vibrate(0);
+		clearInterval(myTimer);
 		init=1;
 	}else{
 
-		setInterval(function(){
+		var myTimer = setInterval(function(){
 			navigator.vibrate([1000, 1000, 3000, 1000, 5000]);
 		}, 11000);
 		init=0;
