--- a/www/index.html
+++ b/www/index.html
@@ -37,11 +37,17 @@
 		
 
 
-body {
-background-image: url("img/screen.png");
-background-repeat: no-repeat;
-background-size: 100%;
-}		
+
+
+html { 
+  background: url(img/screen.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 	</style>
 </head>
 
