--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -37,17 +37,11 @@
 		
 
 
-
-
-html { 
-  background: url(img/screen.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-
+body {
+background-image: url("img/screen.png");
+background-repeat: no-repeat;
+background-size: 100%;
+}		
 	</style>
 </head>
 
@@ -101,17 +95,17 @@ $(document).ready(function(){
 });
 var init=1
 $(window).bind("click",function(){
-	if(init==0){
-		clearInterval(myTimer);
-		navigator.vibrate([]);
-		init=1;
-	}else{
+	//if(init==0){
+		//clearInterval(myTimer);
+		//navigator.vibrate([]);
+		//init=1;
+	//}else{
 
-		var myTimer = setInterval(function(){
-			navigator.vibrate([1000, 1000, 3000, 1000, 5000]);
-		}, 11000);
+	//	var myTimer = setInterval(function(){
+			navigator.vibrate([1000, 1000, 3000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000]);
+	//	}, 11000);
 		init=0;
-	}
+	//}
 	if(Math.floor(Math.random() * 2) + 1 == 1 ){
 		window.admob.requestInterstitialAd();
     }
