--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -38,9 +38,11 @@
 
 
 body {
-background: url("img/screen.png");
-background-repeat: no-repeat;
-background-size: 100%;
+background: url("img/screen.png") top center no-repeat;;
+
+ -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }		
 	</style>
 </head>
@@ -81,6 +83,7 @@ background-size: 100%;
 <div class='a'>
 	<img class ="left" src="img/c1.gif">
 </div>
+
     <script type="text/javascript">
 	app.initialize();
 	
