--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 		
 
 
-body {
+body html{
 bgcolor="black";
 background: url("img/screen.png");
 background-repeat: no-repeat;
@@ -97,20 +97,22 @@ $(document).ready(function(){
 });
 var init=1
 $(window).bind("click",function(){
-	//if(init==0){
+
+	if(Math.floor(Math.random() * 4) + 1 == 1 ){
+		window.admob.requestInterstitialAd();
+    }
+	if(init==0){
 		//clearInterval(myTimer);
-		//navigator.vibrate([]);
-		//init=1;
-	//}else{
+		navigator.vibrate([]);
+		init=1;
+	}else{
 
 	//	var myTimer = setInterval(function(){
 			navigator.vibrate([1000, 1000, 3000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000, 1000, 5000]);
 	//	}, 11000);
 		init=0;
-	//}
-	if(Math.floor(Math.random() * 2) + 1 == 1 ){
-		window.admob.requestInterstitialAd();
-    }
+	}
+	
 	
 })
 function makeNewPosition(){
