--- a/www/index.html
+++ b/www/index.html
@@ -38,12 +38,19 @@
 		
 
 
-body html{
+html  {
 bgcolor="black";
 background: url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
-}		
+}	
+
+body  {
+bgcolor="black";
+background: url("img/screen.png");
+background-repeat: no-repeat;
+background-size: 100%;
+}			
 	</style>
 </head>
 
