--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 		top:0px;
 		bottom:100px;
 		margin: 5px;
-		width: 250px;
+		width: 350px;
 	  }
 
 		div.a {
@@ -39,14 +39,14 @@
 
 
 html  {
-bgcolor="black";
+background-color: black;
 background: url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
 }	
 
 body  {
-bgcolor="black";
+background-color: black;
 background: url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
@@ -98,7 +98,7 @@ $(document).ready(function(){
     animateDiv($(".a"));
 	
 	
-	if(Math.floor(Math.random() * 2) + 1 == 1 ){
+	if(Math.floor(Math.random() * 3) + 1 == 1 ){
 		window.admob.requestInterstitialAd();
 	}
 });
