--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
 html  {
 background-color: black;
 background: url("img/screen.png");
+background-image: url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
 }	
@@ -48,6 +49,7 @@ background-size: 100%;
 body  {
 background-color: black;
 background: url("img/screen.png");
+background-image: url("img/screen.png");
 background-repeat: no-repeat;
 background-size: 100%;
 }			
