--- a/www/index.html
+++ b/www/index.html
@@ -156,7 +156,9 @@ function animateDiv($target){
     var speed = calcSpeed([oldq.top, oldq.left], newq);
     
     $('.a').animate({ top: newq[0], left: newq[1] }, speed, function(){
-      animateDiv($target);        
+		setTimeout(function(){
+			  animateDiv($target);      
+		},1000)	  
     });
     
 };
