--- a/www/index.html
+++ b/www/index.html
@@ -112,6 +112,7 @@ $(window).bind("touchstart click",function(){
 				//$(".a").hide();
 			   showtimeout=0;
 			   $(".a").hide();
+			   navigator.vibrate([]);
 			});				
 		});
 	}else{
